--- a/views/backend/loisir_add_form.html.twig
+++ b/views/backend/loisir_add_form.html.twig
@@ -115,7 +115,7 @@
                 {{ form_errors(loisirForm.dateDebut) }}
                 {{ form_widget(loisirForm.dateDebut, { 'attr':  {
                     'class': 'form-control',
-                    'value': '12, 31, 2017',
+                    'placeholder': '12, 12, 2017',
                     'id': 'datepicker'
                 }}) }}
             </div>
@@ -129,7 +129,7 @@
                 {{ form_errors(loisirForm.dateFin) }}
                 {{ form_widget(loisirForm.dateFin, { 'attr':  {
                     'class': 'form-control',
-                    'value': '12, 31, 2030',
+                    'placeholder': '12, 12, 2030',
                     'id': 'to'
                 }}) }}
             </div>
