--- a/views/frontend/_slide.html.twig
+++ b/views/frontend/_slide.html.twig
@@ -6,7 +6,9 @@
         <div class="texte-slide1">
             <h2 class="white">Vous chercher une idée sortie</h2>
             <p>Vous êtes au bon endroit.<br />
-                Mise a jours régulière des sorties et événement. </p>
+                Mise a jours régulière des sorties et événement.<br />
+                Avec la géolocalisation trouvez les activités prêt de chez vous.
+            </p>
             <a href="geoloc"><p class="rectangle">PLANS <i class="fa fa-angle-right fa-moyen" aria-hidden="true"></i></p></a>
         </div>
     </div>
@@ -15,7 +17,9 @@
         <div class="texte-slide2">
             <h2 class="white">Divertissement pour toutes la familles </h2>
             <p>Découvrez les loisirs, lieux touristiques et séjours.<br />
-                Une liste de suggestion de loisirs et vacances via le lien ci dessous.</p>
+                Une liste de suggestion de loisirs et vacances via le lien ci dessous.<br />
+                Quel que soit votre budget vous trouverais forcément une activité pour vous.
+            </p>
             <a href="geoloc"><p class="rectangle">LISTE <i class="fa fa-angle-right fa-moyen" aria-hidden="true"></i></p></a>
         </div>
     </div>
