--- a/views/frontend/index.html.twig
+++ b/views/frontend/index.html.twig
@@ -1,40 +1,38 @@
 {% extends "views/layout.html.twig" %}
 
 {% block meta %}
-    <title>Idées loisirs</title>
-    <meta name="description"
-          content="Divertissement pour toutes la familles. Découvrez les loisirs, lieux touristiques et séjours. Une liste de suggestion de loisirs et vacances via le lien ci dessous."/>
+    <title>Idées loisirs et sortie culturelle pour toutes la familles</title>
+    <meta name="description" content="Divertissement pour toutes la familles. Découvrez les activité, lieux touristiques, séjours et vacances. La géolocalisation vous aide a trouvez les activités pret de chez vous."/>
 {% endblock %}
 
 {% block content %}
     {{ include('views/frontend/_slide.html.twig') }}
     <div id="main">
-        <div class="display"><h1> BON PLANS </h1>
-            <p><a href="/geoloc" TITLE="Liste des loisirs"> VOIR TOUT <i class="fa fa-angle-double-right fa-moyen"
-                                                                         aria-hidden="true"></i> </a></p></div>
-
+        <div class="display">
+            <h1> BON PLANS </h1>
+            <p><a href="/geoloc" TITLE="Liste des loisirs"> VOIR TOUT <i class="fa fa-angle-double-right fa-moyen" aria-hidden="true"></i> </a></p>
+        </div>
         {% for loisir in loisirs %}
 
             <div class="liste-main shadow-none">
-                <a class="articleTitle" href="{{ path('sejours/', { 'id': loisir.id }) }}?positionL={{ loisir.positionLat }}&positionN={{ loisir.positionLng }}">
-                    <img class="liste-main" src="/images/{{ loisir.image }}" alt="{{ loisir.title }}"></a>
-                <h2>{{ loisir.title[:19] }}
+                <a class="articleTitle" href="{{ path('sejours/', { 'id': loisir.id }) }}?positionL={{ loisir.positionLat }}&positionN={{ loisir.positionLng }}"><img class="liste-main" src="/images/{{ loisir.image }}" alt="{{ loisir.title }}"></a>
+                <h2>{{ loisir.title[:15]|capitalize }}...
                     <span class="type">{{ loisir.categorie|replace({0: "Famille", 1: "Enfants", 2: "Senior"}) }}</span>
                 </h2>
                 <p>{{ loisir.content[:178] }}... </p>
                 <div class="display">
-                    <p class="fa-min"><i class="fa fa-map-marker fa-min" aria-hidden="true"></i> {{ loisir.position[:30] }}
-                    </p>
-                    <P class="prix">{{ loisir.prix|replace({0: "GRATUIT"}) }} €</P>
-
+                    <p class="fa-min"><i class="fa fa-map-marker fa-min" aria-hidden="true"></i> {{ loisir.position[:30] }}</p>
+                    {% if loisir.prix == 0 %}
+                    {% else %}
+                        <span><A class="prix" href="{{ path('sejours/', { 'id': loisir.id }) }}?positionL={{ loisir.positionLat }}&positionN={{ loisir.positionLng }}">{{ loisir.prix }} €</a></span>
+                    {% endif %}
                 </div>
-                <a href="{{ path('sejours/', { 'id': loisir.id }) }}?positionL={{ loisir.positionLat }}&positionN={{ loisir.positionLng }}">
-                    <p class="reserver">Plus d'info</p></a>
+                <a href="{{ path('sejours/', { 'id': loisir.id }) }}?positionL={{ loisir.positionLat }}&positionN={{ loisir.positionLng }}"><p class="reserver">Plus d'info</p></a>
             </div>
 
         {% endfor %}
 
-        {% set page, pageSuivant = 6, 12 %}
+        {% set page, pageSuivant = 8, 16 %}
 
         <nav aria-label="navigation">
             <ul class="pager">
