--- a/views/frontend/result.html.twig
+++ b/views/frontend/result.html.twig
@@ -1,5 +1,7 @@
 {% extends "/views/layout.html.twig" %}
-
+{% block meta %}
+    <title>Résultat par ville</title>
+{% endblock %}
 {% block content %}
     {% set resultNB = 0 %}
 
