--- a/views/frontend/unique.html.twig
+++ b/views/frontend/unique.html.twig
@@ -34,7 +34,7 @@
                 <p class="prix-unique"> Prix {{ loisir.prix }} €</p>
             {% endif %}
             <p><A href="{{ loisir.lien }}" class="prix-unique"> Lien du site</a></p>
-
+            <div class="fb-like" data-href="https://www.cadito.fr/" data-layout="box_count" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
         </div>
 
     </div>
@@ -44,7 +44,7 @@
         <h3>Commentaires</h3>
         {% for comment in comments %}
             <hr>
-            Note {{ comment.note }} <strong> Anonyme </strong> : {{ comment.content }} <a href="/comment/{{ comment.id }}/signale"> : Signaler le commentaire</a><br>
+            Note {{ comment.note }} <strong> Anonyme </strong> : {{ comment.content }} <a href="/comment/{{ comment.id }}/signale/{{ comment.hobbies }}"> : Signaler le commentaire</a><br>
 
         {% else %}
             Aucun commentaire trouvez.
@@ -103,6 +103,7 @@
     </div>
     <div id="map"></div>
 
+    <div id="fb-root"></div>
 
     <!-- script qui appel la map -->
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
